apps/team-alpha/hello-app/envs/stage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app
  namespace: team-alpha
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: hello.team-alpha.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-app
                port:
                  number: 80
